--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "классическая Настя",
-    "short_name": "классическая Настя",
-    "description": "приложение-сюрприз",
-    "lang": "ru-RU",
+  "name": "Web Community Leaders UK IE",
+    "short_name": "Web Leaders",
+    "description": "Web Community Leaders landing page",
+    "lang": "en-GB",
     "start_url": "/",
     "display": "standalone",
     "theme_color": "#E6E6FA",
